--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -16,4 +16,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: nunesmig/brightstarts:${ github.run_number }
+        tags: lacapela/brightstartsluiscapela:${ github.run_number }
