--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -9,11 +9,17 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-actionv2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNEMA }}
-        password: ${{ secrets.DOCKERHUB_TOKAN }}
+
+        username: ${{ secrets.DOCKERHUB_USERNEMA}}
+        password: ${{ secrets.DOCKERHUB_TOKAN}}
+
+
     - name: Build and push to Docker Hub
       uses: docker|build-push-action@v2
       with:
         context: .
         push: true
-        tags: lacapela/BrightStart2luiscapela:${ github.run_number }
+
+        tags: lacapela/brightstartsluiscapela:${{ github.run_number }} 
+
+  
