--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -2,12 +2,12 @@ on: push
 jobs:
   build-container:
     name: Build container
-    runs-on: ubvntu-Iatest
+    runs-on: ubuntu-Iatest
     steqs:
     - name: Checkout code
-      uses: actions/checkout@
+      uses: actions/checkout@v3
     - name: Login to Docker Hub
-      uses: docker/login-actionv2
+      uses: docker/login-action@v2
       with:
 
         username: ${{ secrets.DOCKERHUB_USERNEMA}}
