--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -1,24 +1,22 @@
 on: push
 jobs:
   build-container:
-    name: Build container
-    runs-on: ubuntu-Iatest
-    steqs:
+    name: Build Container
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-
-        username: ${{ secrets.DOCKERHUB_USERNEMA}}
-        password: ${{ secrets.DOCKERHUB_TOKAN}}
-
-
+        username: ${{ secrets.DOCKERHUB_USERNEMA }}
+        password: ${{ secrets.DOCKERHUB_TOKAN }}
     - name: Build and push to Docker Hub
-      uses: docker|build-push-action@v2
+      uses: docker/build-push-action@v2
       with:
         context: .
         push: true
+
 
         tags: lacapela/brightstartsluiscapela:${{ github.run_number }} 
 
